--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,130 @@
-* {box-sizing: border-box;}body {margin: 0px;}header {border: 6px solid #000000;}main {  border: 5px solid black;height: 470px;display: flex;align-items: center;margin-bottom: 10px;}.entername{color: darkblue;text-align: center;}@keyframes big-small {0% {transform: scale(1);}50% {transform: scale(1.1);}100% {transform: scale(1);}}.flex-container {height: 20px;display: flex;flex-direction: row;justify-content: center;align-items: center;margin: 0px;}.level-easy {background-color: springgreen;border: 2px solid springgreen;}.level-medium, .size-small {background-color: green;border: 2px solid green;}.level-hard {background-color: yellow;border: 2px solid yellow;}.level-very-hard, .size-medium {background-color: goldenrod;border: 2px solid goldenrod;}.level-god-mode {background-color: red;border: 2px solid red;}.level-impossible, .size-big {background-color: darkred;border: 2px solid darkred;}.level, .size {font-size: 8px ;display: flex;justify-content: center;align-items: center;margin: 50px;width: 66px;height: 16px;color: #ffffff;text-align: center;animation-name: big-small;animation-iteration-count: infinite;animation-duration: 1s;border-radius: 10px;text-decoration: none;}.game, .giveUP {background-color: #000000;color: #ffffff;display: block;}#ball {background-color:coral;height:50px;width: 50px;border-radius: 50%; position: relative;animation-name: ballMoving;animation-iteration-count: infinite;animation-duration: 0s;}@keyframes ballMoving {0% {left: 2px;background-color: coral}25% {left: 90%;background-color: yellow}50% {right: 2px;background-color: yellowgreen}75% {right: 90%;background-color: chartreuse}100% {left: 2px;background-color: coral}}#pointsCounter{height: 50px;width: 50px;border: 4px solid blue;display: block;}.giveUP{margin-bottom: 5px;}
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0px;
+}
+header {
+  border: 6px solid #000000;
+}
+main {
+  border: 5px solid black;
+  height: 470px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.entername {
+  color: darkblue;
+  text-align: center;
+}
+@keyframes big-small {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.flex-container {
+  height: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+}
+.level-easy {
+  background-color: springgreen;
+  border: 2px solid springgreen;
+}
+.level-medium,
+.size-small {
+  background-color: green;
+  border: 2px solid green;
+}
+.level-hard {
+  background-color: yellow;
+  border: 2px solid yellow;
+}
+.level-very-hard,
+.size-medium {
+  background-color: goldenrod;
+  border: 2px solid goldenrod;
+}
+.level-god-mode {
+  background-color: red;
+  border: 2px solid red;
+}
+.level-impossible,
+.size-big {
+  background-color: darkred;
+  border: 2px solid darkred;
+}
+.level,
+.size {
+  font-size: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+  width: 66px;
+  height: 16px;
+  color: #ffffff;
+  text-align: center;
+  animation-name: big-small;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  border-radius: 10px;
+  text-decoration: none;
+}
+.game,
+.giveUP {
+  background-color: #000000;
+  color: #ffffff;
+  display: block;
+}
+#ball {
+  background-color: coral;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  position: relative;
+  animation-name: ballMoving;
+  animation-iteration-count: infinite;
+  animation-duration: 0s;
+}
+@keyframes ballMoving {
+  0% {
+    left: 2px;
+    background-color: coral;
+  }
+  25% {
+    left: 90%;
+    background-color: yellow;
+  }
+  50% {
+    right: 2px;
+    background-color: yellowgreen;
+  }
+  75% {
+    right: 90%;
+    background-color: chartreuse;
+  }
+  100% {
+    left: 2px;
+    background-color: coral;
+  }
+}
+#pointsCounter {
+  height: 50px;
+  width: 50px;
+  border: 4px solid blue;
+  display: block;
+}
+.giveUP {
+  margin-bottom: 5px;
+}
