--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,13 @@ body {
   margin: 0px;
 }
 header {
-  border: 6px solid #000000;
+  border-top: 6px solid #000000;
+  border-bottom: 6px solid #000000;
 }
 main {
-  border: 5px solid black;
-  height: 470px;
+  border-top: 3px solid black;
+  border-bottom: 9px solid black;
+  height: 600px ;
   display: flex;
   align-items: center;
   margin-bottom: 10px;
@@ -18,17 +20,7 @@ main {
   color: darkblue;
   text-align: center;
 }
-@keyframes big-small {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
+
 .flex-container {
   height: 20px;
   display: flex;
@@ -38,31 +30,31 @@ main {
   margin: 0px;
 }
 .level-easy {
-  background-color: springgreen;
-  border: 2px solid springgreen;
+  background-color: cornflowerblue;
+  border: 2px solid cornflowerblue;
 }
 .level-medium,
 .size-small {
-  background-color: green;
-  border: 2px solid green;
+  background-color: cornflowerblue;
+  border: 2px solid cornflowerblue;
 }
 .level-hard {
-  background-color: yellow;
-  border: 2px solid yellow;
+  background-color: cornflowerblue;
+  border: 2px solid cornflowerblue;
 }
 .level-very-hard,
 .size-medium {
-  background-color: goldenrod;
-  border: 2px solid goldenrod;
+  background-color: cornflowerblue;
+  border: 2px solid cornflowerblue;
 }
 .level-god-mode {
-  background-color: red;
-  border: 2px solid red;
+  background-color: cornflowerblue;
+  border: 2px solid cornflowerblue;
 }
 .level-impossible,
 .size-big {
-  background-color: darkred;
-  border: 2px solid darkred;
+  background-color: cornflowerblue;
+  border: 2px solid cornflowerblue;
 }
 .level,
 .size {
@@ -75,10 +67,6 @@ main {
   height: 16px;
   color: #ffffff;
   text-align: center;
-  animation-name: big-small;
-  animation-iteration-count: infinite;
-  animation-duration: 1s;
-  border-radius: 10px;
   text-decoration: none;
 }
 .game,
