--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ main {
   display: block;
 }
 #ball {
-  background-color: coral;
+  background-color: cornflowerblue;
   height: 50px;
   width: 50px;
   border-radius: 50%;
