--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@
 html {
   height: 100%;
   width: 100%;
-} 
+}
 
 input {
-  height: 10px;
-  background-color: #ffffff ;
-  border: none;
+  height: 50px;
+  width: 50px;
+  margin-left: 50px;
+  padding: 0px;
 }
 
 label {
